# FolderOrganizer

./: .gitignore  LICENSE  README.md  folderOrganizer.py  pyproject.toml
docs/: roadmap.md
folder_cleaner/: client.py  folderOrganizer.py
folder_cleaner/organizer_graph/: graph.py  state.py
folder_cleaner/organizer_graph/schemas/: directory_summary.py
frontend/pycleanerpage/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/pycleanerpage/src/: main.tsx  theme.ts
frontend/pycleanerpage/src/components/ui/: ProductPageComponent.tsx
frontend/pycleanerpage/src/themeStyles/: semanticToken.ts  textStyles.ts
