# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-cleaner"
version = "0.1.0"
authors = [
  { name="Duarte", email="caldasdcardoso@example.com" },
]
description = "A tool to organize folders and clean the desktop environment."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "filetype>=1.2.0",
    "ruff>=0.12.0",
    "typer>=0.16.0",
]

[project.scripts]
clean = "folder_cleaner.client:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]

[tool.setuptools]
packages = ["folder_cleaner"]
