# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-cleaner"
version = "0.1.0"
authors = [
  { name="Duarte", email="caldasdcardoso@example.com" },
]
description = "A tool to organize folders and clean the desktop environment."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "filetype>=1.2.0",
    "langchain>=0.3.26",
    "langgraph>=0.5.0",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "ruff>=0.12.0",
    "typer>=0.16.0",
]

[project.scripts]
clean = "folder_cleaner.client:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]

[tool.setuptools]
packages = ["folder_cleaner"]
